--- a/src/styles.less
+++ b/src/styles.less
@@ -2164,3 +2164,36 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.log-template-json-editor .ace-jsoneditor.ace_editor {
 		min-height: 443px !important;
 	}
+
+	// code for display summary execution boxes
+
+	.summary-list {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		padding-top: 1px;
+		padding-left: 1px;
+		box-sizing: border-box;
+		margin: auto;
+		box-shadow: inset 0 0 0 1px #00000020;
+	  }
+	  
+	  .summary-item {
+		width: calc(20% + 1px);
+		margin-top: -1px;
+		margin-left: -1px;
+		padding: 30px;
+		border: 1px solid #00000020;
+		box-sizing: border-box;
+		transition: all 0.2s;
+		box-sizing: border-box;
+	  }
+	  
+	  .summary-item:hover {
+		border-color: transparent;
+		box-shadow: 0 0 15px -2px #00000020;
+	  }
+	  .summary-item > div h4{
+		font-weight: 400;
+	  }
+	  
