--- a/src/styles.less
+++ b/src/styles.less
@@ -2175,7 +2175,7 @@ td .table-sm input, td .table-sm select, td .table-sm{
 		padding-left: 1px;
 		box-sizing: border-box;
 		margin: auto;
-		box-shadow: inset 0 0 0 1px #00000020;
+		// box-shadow: inset 0 0 0 1px #00000020;
 	  }
 	  
 	  .summary-item {
@@ -2187,6 +2187,7 @@ td .table-sm input, td .table-sm select, td .table-sm{
 		box-sizing: border-box;
 		transition: all 0.2s;
 		box-sizing: border-box;
+		background-color: #fff!important;
 	  }
 	  
 	  .summary-item:hover {
