changes related to policy tab

--- a/src/app/audit/audit.component.html
+++ b/src/app/audit/audit.component.html
@@ -204,6 +204,8 @@
                           <input type="text" class="form-control" placeholder="Search" [(ngModel)]="searchData"
                             (keyup)="onSearch()">
                         </div>
+                        <!-- <opsmx-search *ngIf="currentDatalength>0" [searchBoxParams]="searchParams" (filteredList)="getSerchItem($event)">
+                        </opsmx-search> -->
                       </div>
                     </div>
                   </ng-container>
