--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -147,9 +147,10 @@
                   <option *ngFor='let criticality of criticalityList' [value]="criticality.criticalityColor" class="{{criticality.textclass}}">
                     {{criticality.displayValue}}
                   </option>
-                </select>
-
-                <i class="far fa-comment-alt ml-2 text-primary clickable" [ngClass]="{'blink_me':log.id == selectedClusterInfo?.id && commentNotificationMessage!=''}" aria-hidden="true" id="criticalityComment" data-toggle="dropdown" data-placement="top" title="{{log.feedbackComment}}"></i>
+                </select>                
+                <i class="far fa-comment-alt ml-2 text-primary clickable" [ngClass]="{'blink_me':log.id == selectedClusterInfo?.id && commentNotificationMessage!=''}" aria-hidden="true" id="criticalityComment" data-toggle="dropdown" data-placement="top" (click)="onClickFeedbackComment(log)" *ngIf="log.feedbackComment == null || log.feedbackComment == ''"></i>
+                <i class="fas fa-comment-alt ml-2 text-primary clickable" [ngClass]="{'blink_me':log.id == selectedClusterInfo?.id && commentNotificationMessage!=''}" aria-hidden="true" id="criticalityComment" data-toggle="dropdown" data-placement="top" (click)="comments = log.feedbackComment" *ngIf="log.feedbackComment != null && log.feedbackComment != ''"></i>
+                
                 <span class="badge badge-info comment-badge clickable" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='commentNotificationMessage' id="criticalityComment" data-toggle="dropdown"></span>
                   
                 <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="criticalityComment">
@@ -181,8 +182,9 @@
                   <option *ngFor='let tag of clusterTagList' [value]="tag.name" class="{{tag.textclass}}">
                     {{tag.name}}
                   </option> 
-                </select>
-                <i class="far fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="clustertagComment" data-toggle="dropdown" data-placement="top" title="{{log.clusterTagInfo.comments}}"></i>
+                </select>                
+                <i class="far fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="clustertagComment" data-toggle="dropdown" data-placement="top" (click)="onClickClusterTagComment(log)" *ngIf="log.clusterTagInfo?.comments == null || log.clusterTagInfo?.comments == ''"></i>
+                <i class="fas fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="clustertagComment" data-toggle="dropdown" data-placement="top" (click)="clusterCommentsList[indexOfelement] = log.clusterTagInfo?.comments" *ngIf="log.clusterTagInfo?.comments != null && log.clusterTagInfo?.comments != ''"></i>
                 <span class="badge badge-info comment-badge clickable" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='tagCommentNotificationMessage' id="clustertagComment" data-toggle="dropdown"  ></span>
                 <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="clustertagComment">
                   <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
@@ -193,7 +195,7 @@
 
                   <div>
                     <div class="form-group mb-2">
-                      <textarea class="form-control" rows="5" [(ngModel)]="clusterCommentsList[indexOfelement]"></textarea>   
+                      <textarea class="form-control" rows="5" [(ngModel)]="clusterCommentsList[indexOfelement]"></textarea>
                     </div>
                     <div class="text-right">
                       <button type="submit" class="btn btn-default">Close</button>
