--- a/src/styles.less
+++ b/src/styles.less
@@ -2179,11 +2179,12 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	  }
 	  
 	  .summary-item {
-		width: calc(20% + 1px);
+		width: calc(25% + 1px);
 		margin-top: -1px;
 		margin-left: -1px;
 		padding: 30px;
-		border: 1px solid #00000020;
+		border-left: 1px solid #00000020;
+		border-right: 1px solid #00000020;
 		box-sizing: border-box;
 		transition: all 0.2s;
 		box-sizing: border-box;
