--- a/src/app/visibility/visibility.component.less
+++ b/src/app/visibility/visibility.component.less
@@ -33,9 +33,7 @@
 	// background-color: #eee !important;
 	// margin: 1px 5px 4px !important;
 	width: -webkit-fill-available;
-	td {
-		// background-color: #fff !important;
-	}
+	
 }
 .gateNametr{
 	background-color: #f1f1f1;
@@ -155,4 +153,16 @@ pre{
 	line-height: 1.5;
 	overflow: unset;
     font-weight: normal;
+}
+::ng-deep .mat-stepper-horizontal-line {
+	flex: none !important;
+	min-width: 25px !important;
+	max-width: 25px !important;
+  }
+::ng-deep .mat-stepper-label-position-bottom .mat-horizontal-stepper-header{
+	width: 150px !important;
+	flex: none !important;
+} 
+::ng-deep .mat-stepper-vertical, .mat-stepper-horizontal{
+	width: 50px !important;
 }
