--- a/src/styles.less
+++ b/src/styles.less
@@ -2170,7 +2170,7 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.summary-list {
 		display: flex;
 		flex-direction: row;
-		flex-wrap: wrap;
+	//	flex-wrap: wrap;
 		padding-top: 1px;
 		padding-left: 1px;
 		box-sizing: border-box;
@@ -2195,7 +2195,10 @@ td .table-sm input, td .table-sm select, td .table-sm{
 		border-color: transparent;
 		box-shadow: 0 0 15px -2px #00000020;
 	  }
-	  .summary-item > div h4{
+	  .summary-item > div h5{
 		font-weight: 400;
 	  }
-	  
+	  .summary-item > div h4{
+		font-weight: 400;
+		font-size: 1.6rem;
+	  }
