--- a/src/styles.less
+++ b/src/styles.less
@@ -406,10 +406,10 @@ span{
 	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
 }
 .data_list_body{
-	padding: 10px 15px;
+	// padding: 10px 15px;
 }
 .data_list_values li{
-	max-width: 80px;
+	// max-width: 80px;
 }
 .data_list_score li{
 	max-width: 80px;
