--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -10,7 +10,7 @@
   </div>
   <!-- /.page_title d-flex -->
 
-  <div class="row no-gutters">
+  <div class="no-gutters">
     <div *ngIf="applicationFinalData.length === 0" class="col-md-12">
       <div>
         <div class="d-flex w-100 h-100">
@@ -21,87 +21,11 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-8">
-      <div class="data_listArea">
-        <ng-container *ngFor="let application of applicationFinalData; let i=index">
-          <div *ngIf="application" class="data_list" (click)="selectedApplication(i,application, finalLabelArray[i])"
-          [ngClass]="{'active':i === finalSelectedTabNumber,'application-lastrun-inprogress':application.applicationStatus === 'RUNNING',
-          'application-lastrun-success':(application.applicationStatus === 'PASS' || application.applicationStatus === 'Pass'),'application-lastrun-fail':application.applicationStatus === 'Fail',
-          'application-lastrun-review':application.applicationStatus === 'Review',
-          'application-lastrun-empty': application.applicationStatus === ''}">
-                        
-                        <div class="data_list_header d-flex align-items-center">
-              <div class="data_list_title">
-                <h3>{{ application && application.applicationName ? application.applicationName: ''}} &nbsp;&nbsp;
-                  <span *ngIf="application && application.activeCount > 0 "> 
-                    <a  [routerLink]="['/application/visibility',application.applicationName,application.applicationId]"  class="btn p-0 popover-hover"  data-toggle="tooltip" data-placement="top" title="Active gates : {{application.activeCount}}"> <i class="fa fa-eye btn-link f16" aria-hidden="true"></i></a></span>
-                </h3> 
-                <span class="datetime">{{application && application.date | date:'medium'}} </span>
-              </div>
-              <!-- /.data_list_title -->
-              <div class="data_list_actionsc d-flex align-items-center ml-auto">
-               <div class="card_indigators d-flex" *ngFor="let canaries of application.recentCanaries; let i=index">
-                    <button type="button" class="btn p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Score: {{canaries.finalScore}}, RunID: {{canaries.canaryId}}">
-                      <a  [routerLink]="['/application/deploymentverification/',application.applicationName,canaries.canaryId]" class="ml-2" 
-                      [ngClass]= "{'ci_check':canaries.finalScore >= canaries.maximumCanaryScore,
-                      'ci_close':canaries.finalScore <= canaries.minimumCanaryScore && canaries.status === 'COMPLETED',
-                      'text-warning':canaries.finalScore > canaries.minimumCanaryScore && canaries.finalScore <= canaries.maximumCanaryScore,
-                      'ci_minus': canaries.finalScore === 'N/A' || canaries.finalScore === '',
-                      'ci_run ico24 popover-hover': canaries.status === 'RUNNING'}">
-                      <i class="far fa" [ngClass]= "{'fa-check-circle':canaries.finalScore && canaries.finalScore >= canaries.maximumCanaryScore,
-                        'fa-minus-circle':(canaries.finalScore <= canaries.minimumCanaryScore && canaries.status === 'COMPLETED') || (canaries.finalScore > canaries.minimumCanaryScore && canaries.finalScore <= canaries.maximumCanaryScore),
-                        
-                        'fa-circle': canaries.finalScore === 'N/A' || canaries.finalScore === '',
-                        'fas fa-circle-notch fa-spin': canaries.status === 'RUNNING'}"></i></a>
-                    </button>
-
-              </div>
-                        <div class="dropdown dropdown-icon-remove">
-                          <button class="btn btn-default ml-3 px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-v"></i>
-                          </button>
-                          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item showElementHover" (click)="deleteApplication(application,i)">Delete</a>
-                          </div>
-                        </div>
-              </div>
-              <!-- /.data_list_actions -->
-            </div>
-            <!-- /.data_list_header -->
-            <div class="data_list_body d-flex">
-              <div class="data_list_values text-center">
-                <ul class="list-unstyled m-0 d-flex flex-wrap">
-                  <li class="showElementHover padd-label" *ngFor="let applicationInfo of application.appInfo; let j=index"
-                    [ngClass]="{'active':application.applicationName === selectedApplicationName && applicationInfo.applicationInfolabel === showAppDataType && applicationInfo.applicationInfoValue != 'N/A'}"
-                    (click)="getAppDataDetails(i,application,applicationInfo.applicationInfolabel,$event,j)">
-                    <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{applicationInfo.applicationInfoValue}}</div>
-                    <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue == '-1'">-</div>
-                    <div class="dl_value_text">{{applicationInfo.applicationInfolabel}} </div>
-                    <span
-                      *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
-                        class="fa fa-angle-up"></i></span>
-                  </li>
-                </ul>
-              </div>
-         
-              <!-- /.data_list_score -->
-            </div>
-            <!-- /.data_list_body -->
-          </div>
-          <!-- /.data_list -->
-        </ng-container>
-
-      </div>
-      <!-- /.data_listArea -->
-    </div>
-    <!-- /.col-sm-8 -->
-    <div class="col-md-4" *ngIf="showReleaseTable">
-      <app-release [releaseDataFromParent]="parentReleaseData"></app-release>
-    </div>
-    <div class="col-sm-4" *ngIf="!showReleaseTable && applicationData.length != 0">
+    <div class="col-sm-4" style="float: right;z-index: 1;transition: all 1s ease 0s;" [ngStyle]="{'left': serviceSidebar ? '0px' : '520px'}" *ngIf="!showReleaseTable && applicationData.length != 0">
       <div class="rightBox position-sticky">
         <div class="rightBox_header d-flex align-items-center">
           <h3>{{selectedApplicationName}}</h3>
+          <span class="float-right" (click)="hideSidebar()"><i class="fas fa-times"></i></span>
         </div>
         <!-- /.rightBox_header -->
         <div class="rightBox_body">
@@ -221,6 +145,118 @@
         <!-- /.rightBox_body -->
       </div>
       <!-- /.rightBox -->
+    </div>
+    <div class="">
+      <div class="data_listArea">
+        <ng-container *ngFor="let application of applicationFinalData; let i=index">
+          <div *ngIf="application" class="data_list" (click)="selectedApplication(i,application, finalLabelArray[i])"
+          [ngClass]="{'active':i === finalSelectedTabNumber,'application-lastrun-inprogress':application.applicationStatus === 'RUNNING',
+          'application-lastrun-success':(application.applicationStatus === 'PASS' || application.applicationStatus === 'Pass'),'application-lastrun-fail':application.applicationStatus === 'Fail',
+          'application-lastrun-review':application.applicationStatus === 'Review',
+          'application-lastrun-empty': application.applicationStatus === ''}">
+                        
+                        <div class="data_list_header d-flex align-items-center">
+              <div class="data_list_title">
+                <h3>{{ application && application.applicationName ? application.applicationName: ''}} &nbsp;&nbsp;
+                  <span *ngIf="application && application.activeCount > 0 "> 
+                    <a  [routerLink]="['/application/visibility',application.applicationName,application.applicationId]"  class="btn p-0 popover-hover"  data-toggle="tooltip" data-placement="top" title="Active gates : {{application.activeCount}}"> <i class="fa fa-eye btn-link f16" aria-hidden="true"></i></a></span>
+                </h3> 
+                <span class="datetime">{{application && application.date | date:'medium'}} </span>
+              </div>
+              <!-- /.data_list_title -->
+              <div class="data_list_actionsc d-flex align-items-center ml-auto">
+               <div class="card_indigators d-flex" *ngFor="let canaries of application.recentCanaries; let i=index">
+                    <button type="button" class="btn p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Score: {{canaries.finalScore}}, RunID: {{canaries.canaryId}}">
+                      <a  [routerLink]="['/application/deploymentverification/',application.applicationName,canaries.canaryId]" class="ml-2" 
+                      [ngClass]= "{'ci_check':canaries.finalScore >= canaries.maximumCanaryScore,
+                      'ci_close':canaries.finalScore <= canaries.minimumCanaryScore && canaries.status === 'COMPLETED',
+                      'text-warning':canaries.finalScore > canaries.minimumCanaryScore && canaries.finalScore <= canaries.maximumCanaryScore,
+                      'ci_minus': canaries.finalScore === 'N/A' || canaries.finalScore === '',
+                      'ci_run ico24 popover-hover': canaries.status === 'RUNNING'}">
+                      <i class="far fa" [ngClass]= "{'fa-check-circle':canaries.finalScore && canaries.finalScore >= canaries.maximumCanaryScore,
+                        'fa-minus-circle':(canaries.finalScore <= canaries.minimumCanaryScore && canaries.status === 'COMPLETED') || (canaries.finalScore > canaries.minimumCanaryScore && canaries.finalScore <= canaries.maximumCanaryScore),
+                        
+                        'fa-circle': canaries.finalScore === 'N/A' || canaries.finalScore === '',
+                        'fas fa-circle-notch fa-spin': canaries.status === 'RUNNING'}"></i></a>
+                    </button>
+
+              </div>
+                        <div class="dropdown dropdown-icon-remove">
+                          <button class="btn btn-default ml-3 px-2 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-ellipsis-v"></i>
+                          </button>
+                          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item showElementHover" (click)="deleteApplication(application,i)">Delete</a>
+                          </div>
+                        </div>
+              </div>
+              <!-- /.data_list_actions -->
+            </div>
+            <!-- /.data_list_header -->
+            <div class="data_list_body d-flex">
+              <div class="data_list_values text-center" style="min-width: 100%;">
+                <ul class="list-unstyled m-0 d-flex flex-wrap">
+                  <li class="showElementHover padd-label" *ngFor="let applicationInfo of application.appInfo; let j=index" style="padding:0px !important"
+                    [ngClass]="{'active':application.applicationName === selectedApplicationName && applicationInfo.applicationInfolabel === showAppDataType && applicationInfo.applicationInfoValue != 'N/A'}"
+                    (click)="getAppDataDetails(i,application,applicationInfo.applicationInfolabel,$event,j)">
+                    <div *ngIf="applicationInfo.applicationInfolabel == 'Deployment Verification'">
+                      <div class="booking-demo" (click)="routeToDV('qa', i)" [ngStyle]="{'background': setBackground('qa', i), 'color': setColor('staging', i)}">
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{getScoreOfCanary('qa', i)}}</div>
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue == '-1'">-</div>
+                        <div class="dl_value_text" style="font-size: 14px;">QA Verification</div>
+                        <!-- <span
+                          *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
+                            class="fa fa-angle-up"></i></span> -->
+                      </div>
+                      <!-- <div style="display: inline-block;padding: 0px 16px;color: white;height: 60px;padding-top: 10px;font-weight: 600;" (click)="routeToDV('qa', i)">
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{getScoreOfCanary('qa', i)}}</div>
+                      </div> -->
+                      <div class="booking-demo" (click)="routeToDV('staging', i)" [ngStyle]="{'background': setBackground('staging', i), 'color': setColor('staging', i)}">
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{getScoreOfCanary('staging', i)}}</div>
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue == '-1'">-</div>
+                        <div class="dl_value_text" style="font-size: 14px;">Staging Verification</div>
+                        <!-- <span
+                          *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
+                            class="fa fa-angle-up"></i></span> -->
+                      </div>
+                      <div class="booking-demo" (click)="routeToDV('prod', i)" [ngStyle]="{'background': setBackground('prod', i), 'color': setColor('staging', i)}">
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{getScoreOfCanary('prod', i)}}</div>
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue == '-1'">-</div>
+                        <div class="dl_value_text" style="font-size: 14px;">Prod Verification</div>
+                        <!-- <span
+                          *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
+                            class="fa fa-angle-up"></i></span> -->
+                      </div>
+                    </div>
+                    <div class="booking-demo" style="border: 1px solid #999;" *ngIf="applicationInfo.applicationInfolabel != 'Deployment Verification'">
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue != -1" >{{applicationInfo.applicationInfoValue}}</div>
+                        <div class="dl_value_count" *ngIf="applicationInfo.applicationInfoValue == '-1'">-</div>
+                        <div class="dl_value_text">{{applicationInfo.applicationInfolabel}} </div>
+                        <!-- <span
+                          *ngIf="applicationInfo.applicationInfolabel === showAppDataType && application.applicationName === selectedApplicationName && applicationInfo.applicationInfoValue != 'N/A' "><i
+                            class="fa fa-angle-up"></i></span> -->
+                    </div>
+                    
+                  </li>
+                </ul>
+              </div>
+         
+              <!-- /.data_list_score -->
+            </div>
+            <!-- /.data_list_body -->
+          </div>
+          <!-- /.data_list -->
+        </ng-container>
+
+      </div>
+      <!-- /.data_listArea -->
+    </div>
+    <!-- /.col-sm-8 -->
+    <div class="col-md-4" style="float: right;z-index: 1;" [ngStyle]="{'left': releaseSidebar ? '0px' : '520px'}" *ngIf="showReleaseTable">
+      <div class="position-sticky">
+        <app-release [releaseDataFromParent]="parentReleaseData"></app-release>
+      </div>
+      
     </div>
     <!-- /.col-sm-4 -->
   </div>
