--- a/src/app/application/application-dashboard/application-dashboard.component.less
+++ b/src/app/application/application-dashboard/application-dashboard.component.less
@@ -92,7 +92,7 @@
 	box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.2);
 }
 .data_list_body {
-	padding: 10px 15px;
+	// padding: 10px 15px;
 	>div {
 		min-width: 50%;
 		-webkit-flex: 0 0 50%;
@@ -128,7 +128,7 @@
 }
 .data_list_values {
 	li {
-		max-width: 80px;
+		// max-width: 180px;
 	}
 	li.active {
 		i {
@@ -388,4 +388,12 @@
 }
 .f16 {
 	font-size: 16px;;
+}
+.booking-demo {
+	display: inline-block;padding: 0px 0px;color: #404040;height: 60px;padding-top: 10px;
+	// font-weight: 600;
+	margin-right: 2px;vertical-align: top;
+	// border: 1px solid #999;
+	width: 135px;
+	background: #e8f4ff;
 }
